Fix position of add-group-container: adjust top property for better alignment

--- a/swimgoals_frontend/src/app/styles/FormGroup.scss
+++ b/swimgoals_frontend/src/app/styles/FormGroup.scss
@@ -2,6 +2,7 @@
 
 .add-group-container {
     position: fixed;
+        top: 20%;
         left: 5%;
         transform: translate(-50%, -50%);
         margin: 10px;
